feature/api add friends endpoints
